bug fixes for class names and spacing in heading blocks

--- a/src/blocks/block-heading/styles/editor.scss
+++ b/src/blocks/block-heading/styles/editor.scss
@@ -22,6 +22,7 @@
 .editor-styles-wrapper .c9-heading {
 	font-size: 10px;
 	margin-bottom: 1.2em;
+	padding: 5px 0px;
 }
 
 .editor-styles-wrapper .c9-heading h1,
